k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: portfolio-backend-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: portfolio-backend
              servicePort: 80
